# HBBA

./: .gitmodules  README.md  rosdep.yaml  stack.xml  stack.xml.bak
abtr_priority/: CMakeLists.txt  abtr_priority.xml  mainpage.dox  manifest.xml  nodelets.xml  package.xml
doc/: README.md  entry-point-config-file.md  includes-behaviors.md  includes-motivations.md  includes-perceptions.md  includes-strategies.md  includes.md  initial-desires.md  js-functions.md  launch-files.md  remap-clauses.md  resources.md
emotion_generator/: CMakeLists.txt  emotion_desire_matrix.yaml  mainpage.dox  manifest.xml
emotions_msgs/: CMakeLists.txt  package.xml
hbba_interface/: CMakeLists.txt  manifest.xml
hbba_interface/launch/: interface.launch
hbba_interface/src/: CoreNode.cpp  GuiNode.cpp  MainWindow.cpp  MainWindow.h
hbba_interface/src/ui/: MainWindow.ui
hbba_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hbba_stats/: mainpage.dox  manifest.xml
hbba_synth/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
hbba_test/: CMakeLists.txt  mainpage.dox  manifest.xml
hbba_tests/: basics.py  basics.sh  mainpage.dox  manifest.xml
hbba_tools/: mainpage.dox  manifest.xml
hbba_validation/: CMakeLists.txt  mainpage.dox  manifest.xml
hbba_validation/data/: 6466.dic  6466.lm  6466.log_pronounce  6466.sent  6466.vocab  map_rdc.pgm  map_rdc.yaml  monitor_topics.txt  visit.yaml
hbba_validation/hbba_cfg/: irl1_bhvr_look_at_motion.yaml  irl1_bhvr_unlock_door.yaml  jn0_proc_sphinx.yaml  scenario.yaml  test_landmarks.yaml  test_people_tracking.yaml  test_unlock_door.yaml  tour_guide.yaml  tr_bhvr_combined_goto.yaml  tr_bhvr_turn_around.yaml  tr_proc_static_map.yaml
hbba_validation/include/hbba_validation/: cardreader_localizer.hpp  cardreader_localizer_imv.hpp  cardreader_localizer_openni.hpp  goto_landmark.hpp  landmarks_interaction.hpp  landmarks_observer.hpp  opt_flow_pose.hpp  state_machine.hpp  tour_guide.hpp  turn_around.hpp  unlock_door.hpp
hbba_validation/launch/: irl1_bhvr_look_at_motion.launch  irl1_bhvr_unlock_door.launch  irl1_motv_goto_generator.launch  irl1_motv_goto_landmark.launch  irl1_motv_landmarks_interaction.launch  irl1_motv_tour_guide.launch  irl1_proc_look_at_motion.launch  irl1_proc_unlock_door.launch  jn0_proc_sphinx.launch  scenario_monitor_server.launch  tr_bhvr_turn_around.launch  tr_proc_static_map.launch
hbba_validation/src/: cardreader_localizer.cpp  cardreader_localizer_imv.cpp  cardreader_localizer_openni.cpp  cardreader_localizer_test.cpp  goto_landmark.cpp  goto_landmark_node.cpp  landmarks_interaction.cpp  landmarks_interaction_node.cpp  landmarks_observer.cpp  opt_flow_pose.cpp  opt_flow_pose_node.cpp  state_machine_test.cpp  tour_guide.cpp  tour_guide_node.cpp  turn_around.cpp  turn_around_node.cpp  unlock_door.cpp  unlock_door_node.cpp
iw/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml  package.xml  setup.py
iw/include/iw/: events_filter.hpp  events_generator.hpp  exploitation_matcher.hpp  intention_workspace.hpp  rosgraph_monitor.hpp
iw/scripts/: events_test.py  get_intention  iw  iw_console
iw/src/: events_filter.cpp  events_generator.cpp  events_generator_node.cpp  exploitation_matcher.cpp  exploitation_matcher_node.cpp  get_intention.py  goto_events_observer.cpp  intention_workspace.cpp  intention_workspace_nodelet.cpp  iw.py  iw_console.py  iw_observer.py  iw_translator.py  rosgraph_monitor.cpp  say_events_observer.cpp
iw/srv/: AddDesire.srv
iw_console/: CMakeLists.txt  mainpage.dox  manifest.xml  run_iwc.sh
iw_console/src/: iw_console.cpp  iw_console.hpp
iw_event_generators/: CMakeLists.txt  package.xml
iw_msgs/: mainpage.dox  manifest.xml
iw_observer/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
iw_observer/include/iw_observer/: rules_ast.hpp  runtime.hpp
iw_observer/src/: iw_observer_node.cpp  rules_ast.cpp  rules_compiler.cpp  rules_parser.y  rules_tokens.l  runtime.cpp
iw_solver_gecode/: CMakeLists.txt  mainpage.dox  manifest.xml  rosdep.yaml
iw_solver_interface/: CMakeLists.txt  mainpage.dox  manifest.xml
iw_solver_ortools/: CMakeLists.txt  basics_test.py  basics_test2.py  interaction_test.py  mainpage.dox  manifest.xml
iw_translator/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
iw_translator/doc/: notation.tex
iw_translator/include/iw_translator/: iw_translator.hpp  solver.hpp  solver_model.hpp  solver_model_ros.hpp  strategy_parser.hpp
iw_translator/iwt_core/: CMakeLists.txt
iw_translator/iwt_core/include/iwt_core/: solver.hpp  solver_model.hpp
iw_translator/iwt_core/src/: sim_parser.cpp  solver.cpp  solver_model.cpp
iw_translator/or_tools/: .gitignore  build.sh  generate_dpkg.sh  install.sh  svn_cert_patch.diff
iw_translator/or_tools/dpkg/DEBIAN/: control
iw_translator/src/: iw_translator.cpp  iw_translator_node.cpp  solver.cpp  solver_impl.hpp  solver_model.cpp  solver_model_ros.cpp  strategy_parser.cpp
iw_translator/tests/: model.yaml  test_iw_translator.launch  test_strategy_parser.cpp  test_strategy_parser.launch
script_engine/: CMakeLists.txt  common_plugins.xml  mainpage.dox  manifest.xml  package.xml  test_plugins.xml
script_engine/include/script_engine/: engine_module.hpp  engine_v8.hpp  publisher_base.hpp  publisher_topic_arg_base.hpp  service_caller_base.hpp
script_engine/src/: .engine_v8.cpp.swp  common_plugins.cpp  engine_v8.cpp  eval_srv_test.cpp  message_common_plugins.cpp  pub_test.cpp  script_engine.cpp  service_common_plugins.cpp
script_engine/srv/: Boolean.srv  CompileScript.srv  EvalScript.srv  RunScript.srv  UpdateRate.srv
topic_filters/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelets.xml  package.xml  switch_filter.py
topic_filters/include/topic_filters/: filtered_publisher.hpp  filtered_subscriber.hpp
topic_filters/src/: filtered_publisher_test.cpp  filtered_subscriber_test.cpp  generic_divider.cpp  generic_divider.hpp  generic_divider_nodelet.cpp  generic_divisor.cpp  topic_delay.cpp
topic_filters/srv/: SetDividerRate.srv  SetDivisorRate.srv  SetState.srv
(+167 files in other folders)
